CSS issues fixed for "No Content popup" in assign course to a class in Content Visibility

--- a/src/main/resources/css/mycollections.css
+++ b/src/main/resources/css/mycollections.css
@@ -854,6 +854,8 @@ button.btn-disabled{
 	color: #fab03a;
 	font: 12px arial;
 	float: left;
+}
+.my-content-class-error-msg-layout {
 	width: 30%;
 	margin: 10% 35%;
 }
